--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"svelte": "^5.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"d3-array": "^3.2.4",
+		"d3-scale": "^4.0.2",
+		"d3-transition": "^3.0.1",
+		"layerchart": "^0.59.1",
+		"papaparse": "^5.4.1"
 	}
 }
