--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
     push:
         # check if your main branch is called 'main' or 'master' and adjust here
-        branches: "main"
+        branches: "master"
 
 jobs:
     build_site:
