--- a/package.json
+++ b/package.json
@@ -12,14 +12,25 @@
 		"@sveltejs/adapter-static": "^3.0.6",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/d3": "^7.4.3",
+		"@types/d3-array": "^3.2.1",
+		"@types/d3-fetch": "^3.0.7",
+		"@types/d3-geo": "^3.1.0",
+		"@types/d3-scale": "^4.0.8",
+		"@types/topojson": "^3.2.6",
 		"svelte": "^5.0.0",
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"axios": "^1.7.7",
+		"d3": "^7.9.0",
 		"d3-array": "^3.2.4",
+		"d3-fetch": "^3.0.1",
+		"d3-geo": "^3.1.1",
 		"d3-scale": "^4.0.2",
 		"d3-transition": "^3.0.1",
 		"layerchart": "^0.59.1",
-		"papaparse": "^5.4.1"
+		"papaparse": "^5.4.1",
+		"topojson": "^3.0.2"
 	}
 }
