--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
 		"@types/d3-scale": "^4.0.8",
 		"@types/topojson": "^3.2.6",
 		"svelte": "^5.0.0",
+		"svelte-bar-chart-race": "^0.1.4",
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
 		"axios": "^1.7.7",
+		"chart.js": "^4.4.7",
 		"d3": "^7.9.0",
 		"d3-array": "^3.2.4",
 		"d3-fetch": "^3.0.1",
@@ -31,6 +33,7 @@
 		"d3-transition": "^3.0.1",
 		"layerchart": "^0.59.1",
 		"papaparse": "^5.4.1",
-		"topojson": "^3.0.2"
+		"topojson": "^3.0.2",
+		"zingchart": "^2.9.16-1"
 	}
 }
