--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
 		"@types/d3-geo": "^3.1.0",
 		"@types/d3-scale": "^4.0.8",
 		"@types/topojson": "^3.2.6",
+		"fluent-svelte": "^1.6.0",
 		"svelte": "^5.0.0",
 		"svelte-bar-chart-race": "^0.1.4",
+		"svelte-range-slider-pips": "^3.1.4",
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
@@ -31,7 +33,8 @@
 		"d3-geo": "^3.1.1",
 		"d3-scale": "^4.0.2",
 		"d3-transition": "^3.0.1",
-		"layerchart": "^0.59.1",
+		"layerchart": "^0.59.6",
+		"leaflet": "^1.9.4",
 		"papaparse": "^5.4.1",
 		"topojson": "^3.0.2",
 		"zingchart": "^2.9.16-1"
